Fixing alignments

--- a/app/styles/knowledge-events-container.scss
+++ b/app/styles/knowledge-events-container.scss
@@ -16,11 +16,11 @@
 
         .divider-rect{
             position:relative;
-            top: 75%;
-            background: #f5c442;
+            top: 25%;
+            background: #D6005B;
             height: 0.4vw;
             width: 10vw;
-            left: 6vw;
+            left: 7vw;
         }
     }
 
@@ -29,7 +29,7 @@
         // margin-bottom: -4%;
         width: 100%; 
         height: 6vw;
-        margin-left: 7.5vw;
+        margin-left: 7vw;
        h1 {
            height: 100vw;
             font-family: 'BebasNeue-Bold';
