--- a/app/styles/knowledge-opnion-container.scss
+++ b/app/styles/knowledge-opnion-container.scss
@@ -5,7 +5,7 @@
        align-content: center;
        background: #f7f7f7;  
        display: block;
-       margin-top: -5%;
+       margin-top: 0%;
        padding-bottom: 8%;
        padding-top: 5%;
 
